# RAG

./: .gitignore  Makefile  README.md  pyproject.toml  student.py
are/: search_results.json
data/output/search_results/: search_results.json
data/processed/bm25_index/: corpus.mmindex.json  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
src/: main.py  utils.py
src/classes/: __init__.py  errors.py  indexer.py  min_search.py  mininal_source.py  questions_model.py  rag_model.py  stud_search.py
