[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bm25s>=0.3.3",
    "fire>=0.7.1",
    "flake8>=7.3.0",
    "langchain-text-splitters>=1.1.1",
    "mypy>=1.20.1",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "tqdm>=4.67.3",
    "vllm>=0.19.0",
]

[tool.mypy]

[[tool.mypy.overrides]]
module = [
    "bm25s.*",
    "fire.*"
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "types-tqdm>=4.67.3.20260408",
]
